--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "comp-229",
-  "version": "1.0.0",
-  "description": "COMP229003_eg",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "author": "Ripudaman",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "ejs": "~2.6.1",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1"
   }
 }
